--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,9 @@
   padding: 0;
   box-sizing: border-box;
 }
+body{
+  font-family: 'Montserrat', sans-serif;
+}
 .contenitore{
   padding: 0 10%;
   text-align: center;
@@ -13,19 +16,72 @@
     padding: 0 3%;
   }
 }
+@media all and (max-width: 767px){
+  .contenitore{
+    padding: 0;
+  }
+  header .navbar-nav{
+    text-align: left;
+  }
+}
+
   /* Proprietà colonne */
 .colonna{ /* Debug */
   background-color: dodgerblue;
   border: 1px solid yellow;
   border-radius: 10px;
   min-height: 150px;
-  margin: 5px;
+  margin: 0px;
 }
 
 /* Proprietà header */
 header{
-  background-color: #00264d;
-  padding: 10px 0;
+  background-color: #2c3e50;
+}
+  /* Aggiustamenti navbar BS */
+header .navbar{
+  margin-bottom: 0;
+  min-height: 80px;
+}
+  /* no colore e bordo */
+header .navbar-default{
+  background-color: transparent;
+  border: 0px;
+}
+
+/* Navbar BS links */
+  /* Proprietà generiche links */
+header .navbar-default .navbar-nav>li>a,
+header .navbar-default .navbar-brand{
+  color: white;
+  line-height: 60px;
+}
+  /* Proprietà specifiche links dx*/
+header .navbar-default .navbar-nav>li>a{
+  /* padding-right: 10px;
+  padding-left: 10px; */
+  font-size: 19px;
+  font-weight: 600;
+}
+  /* Proprietà specifiche Logo */
+header .navbar-default .navbar-brand{
+  font-size: 28px;
+  height: auto;
+  font-weight: 800;
+}
+  /* Hover/Focus links */
+header .navbar-default .navbar-nav>li>a:hover{
+  color: #1abc9c;
+}
+header .navbar-default .navbar-brand:focus,
+header .navbar-default .navbar-brand:hover,
+header .navbar-default .navbar-nav>li>a:focus{
+  color: white;
+}
+
+/* Hamburger button */
+header .navbar-toggle {
+  margin: 30px 0 0;
 }
 
 /* Proprietà main */
