--- a/css/style.css
+++ b/css/style.css
@@ -25,15 +25,6 @@ body{
   }
 }
 
-  /* Proprietà colonne */
-.colonna{ /* Debug */
-  background-color: dodgerblue;
-  border: 1px solid yellow;
-  border-radius: 10px;
-  min-height: 150px;
-  margin: 0px;
-}
-
 /* Proprietà header */
 header{
   background-color: #2c3e50;
@@ -86,8 +77,36 @@ header .navbar-toggle {
 
 /* Proprietà main */
 section{
-  padding:20px 0;
+  padding: 40px 0;
   min-height: 200px;
+}
+/* Titoli sezione */
+section h2{
+  margin: 0 0 20px;
+  font-weight: 800;
+}
+
+.white-text{
+  color: white;
+}
+/* Proprietà separatore */
+.separatore{
+  margin-bottom: 20px;
+  font-size: 18px;
+}
+  /* Linee orizzontali */
+.separatore .line-hor{
+  border: 1px solid;
+  display: inline-block;
+  width: 10%;
+  max-width: 300px;
+  min-width: 30px;
+  margin: 0 1.5%;
+  vertical-align: middle;
+}
+  /* Icona stella */
+.separatore .star-icon{
+  vertical-align: middle;
 }
 
   /* Proprietà Jumbo */
@@ -95,9 +114,40 @@ section{
   background-color: #00b386;
   min-height: 200px;
 }
+.greensection img{
+  max-width: 160px;
+}
+.jumbo_title{
+   font-size: 40px;
+   margin-top: 20px;
+}
+#jumbo-text{
+  font-size: 18px;
+  font-weight: 600;
+}
+
   /* Proprietà Protfolio */
 .whitesection{
   background-color: white;
+}
+.whitesection img{
+  max-width: 100%;
+  border-radius: 10px;
+  margin: 10px 0;
+}
+
+/* Proprietà ABOUT */
+.testosx{
+  text-align: left;
+}
+
+/* Proprietà colonne */
+.colonna{ /* Debug */
+background-color: dodgerblue;
+border: 1px solid yellow;
+border-radius: 10px;
+min-height: 150px;
+margin: 0px;
 }
 
 /* Proprietà footer */
